--- a/_stu/1155091998.md
+++ b/_stu/1155091998.md
@@ -1,1 +1,3 @@
 NING JING JIE, Ethan (@EthanNING)
+
+[![Build Status](https://travis-ci.org/csci3250-2019/project-team-g.svg?branch=EthanNING-branch)](https://travis-ci.org/csci3250-2019/project-team-g)
